--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 		<h1>Lost and Found<h1>
 	</head>
 	<body>
-
+		<h2>Schedule</h2>
 		<ul>
-			<li><a href="page1.html">monday<a><li>
-			<li>wensdays<li>
-			<li>thursday-Trivia Night<li>
-			<li>saturday-<li>
-		<ul><br>
+			<li><a href="Days/Sunday.html">Sunday</a></li>
+			<li><a href="Days/Monday.html">monday</a></li>
+				<ol><li>Bible Study</li></ol>
+			<li><a href="Days/Tuesday.html">Tuesday</a></li>
+				<ol><li>Bible Study</li></ol>
+			<li><a href="Days/Wednesday.html">Wednesday</a></li>
+				<ol><li>Bible Study</li></ol>
+			<li><a href="Days/Thursday.html">Thursday</a></li>
+				<ol><li>Trivia</li></ol>
+			<li><a href="Days/Friday.html">Friday</a></li>
+				<ol><li>Bible Study</li></ol>
+			<li><a href="Days/Saturday.html">Saturday</a></li>
+				<ol><li>Bible Study</li></ol>
+			</ul><br>
 	</body>
 	<footer><a href="https://www.facebook.com/lostand.found.566">Facebook page<a></footer>
 </html>
