--- a/Days/Sunday.html
+++ b/Days/Sunday.html
@@ -5,9 +5,10 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="./Days.css" rel="stylesheet"/>
 		<title>Lost & Found Sunday</title>
-		<h1><a href="index.html">Lost & Found</a></h1>
+		
 	</head>
 	<body>
+		<h1><a href="/index.html" class="head">Lost & Found</a></h1>
 		<h2>Sunday</h2>
 		<ul>
 			<li></li>
