--- a/index.html
+++ b/index.html
@@ -9,22 +9,39 @@
 		<h1>Lost and Found<h1>
 	</head>
 	<body>
+		<img src="" alt="">
 		<h2>Schedule</h2>
+		<!--ol is what happens in that day-->
 		<ul>
+		
 			<li><a href="Days/Sunday.html">Sunday</a></li>
-			<li><a href="Days/Monday.html">monday</a></li>
 				<ol><li>Bible Study</li></ol>
-			<li><a href="Days/Tuesday.html">Tuesday</a></li>
+		
+				<li><a href="Days/Monday.html">Monday</a></li>
 				<ol><li>Bible Study</li></ol>
-			<li><a href="Days/Wednesday.html">Wednesday</a></li>
+		
+				<li><a href="Days/Tuesday.html">Tuesday</a></li>
 				<ol><li>Bible Study</li></ol>
-			<li><a href="Days/Thursday.html">Thursday</a></li>
+		
+				<li><a href="Days/Wednesday.html">Wednesday</a></li>
+				<ol><li>Bible Study</li></ol>
+		
+				<li><a href="Days/Thursday.html">Thursday</a></li>
 				<ol><li>Trivia</li></ol>
-			<li><a href="Days/Friday.html">Friday</a></li>
+		
+				<li><a href="Days/Friday.html">Friday</a></li>
 				<ol><li>Bible Study</li></ol>
-			<li><a href="Days/Saturday.html">Saturday</a></li>
+		
+				<li><a href="Days/Saturday.html">Saturday</a></li>
 				<ol><li>Bible Study</li></ol>
-			</ul><br>
+		
+		</ul> 
+		<br>
 	</body>
-	<footer><a href="https://www.facebook.com/lostand.found.566">Facebook page<a></footer>
+	
+	<footer>
+		<a href="https://www.facebook.com/lostand.found.566" target="_blank">Facebook page<a>
+
+	</footer>
+
 </html>
