--- a/Days/Friday.html
+++ b/Days/Friday.html
@@ -5,7 +5,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="./Days.css" rel="stylesheet"/>
 		<title>Lost & Found Friday</title>
-		<h1><a href="index.html">Lost & Found</a></h1>
+		<h1><a href="/index.html">Lost & Found</a></h1>
 	</head>
 	<body>
 		<h2>Friday</h2>
